# Code-examples

./: README.md  find_unique_anagrams.cpp  fork.c  functions.go  hitCounter-last10secs-last1hour.c  index.md
App_Development/: README.adoc
Async_Programming/: README.md
Autosar/: README.md
BlockChain/: README.adoc  README.md
Build-System/Cmake/Examples/Sum_of_2_Numbers/: CMakeLists.txt  README.md  test.cpp  test.h
Build-System/Cmake/Examples/d-b-32/: CMakeLists.txt
Companies-Coding-Rounds/: prodX.AI
DS_Questions/: README.md
Device_Drivers/: README.md
Frameworks/: README.adoc  README.md
Iris_Detection_With_RasberryPi/: README.md
Languages/: README.md
Languages/Programming_Languages/c++/Design_Pattens/Behavioral/Mediator/Online_Auction/Code/: CMakeLists.txt  README.md
Languages/Programming_Languages/c++/Design_Pattens/Behavioral/Mediator/Online_Auction/Code/bidder/: CMakeLists.txt
Languages/Programming_Languages/c++/Design_Pattens/Behavioral/Mediator/Online_Auction/Code/bidder/inc/: bidder.h  bidder1.h
Languages/Programming_Languages/c++/Design_Pattens/Behavioral/Mediator/Online_Auction/Code/common/inc/: common.h
Languages/Programming_Languages/c++/Design_Pattens/Behavioral/Mediator/Online_Auction/Code/driver/: CMakeLists.txt  main.cpp
Languages/Programming_Languages/c++/Design_Pattens/Behavioral/Mediator/Online_Auction/Code/mediator/: CMakeLists.txt
Languages/Programming_Languages/c++/Design_Pattens/Behavioral/Mediator/Online_Auction/Code/mediator/inc/: mediator.h  mediator1.h
Languages/Programming_Languages/c++/Design_Pattens/Behavioral/Mediator/Online_Auction/Code/mediator/src/: mediator1.cpp
Languages/Programming_Languages/c++/Design_Pattens/Behavioral/Mediator/Online_Auction/Code/seller/: CMakeLists.txt
Languages/Programming_Languages/c++/Design_Pattens/Behavioral/Mediator/Online_Auction/Code/seller/inc/: seller.h  seller1.h
Languages/Programming_Languages/c++/Design_Pattens/Behavioral/Mediator/Online_Auction/Code/seller/src/: seller1.cpp
Libraries/PdCurses/Source_Examples/Progress_bar/: CMakeLists.txt  README.md
Licenses/: README.md
Machine_Learning/: README.md
OOD/: README.md
OOD/MeetingRoom_Scheduler/Code/: CMakeLists.txt
OOD/MeetingRoom_Scheduler/Code/Driver/: CMakeLists.txt  main.cpp
OOD/MeetingRoom_Scheduler/Code/Meeting/: CMakeLists.txt
OOD/MeetingRoom_Scheduler/Code/Meeting/inc/: Meeting.h
OOD/MeetingRoom_Scheduler/Code/Meeting/src/: Meeting.cpp
OOD/MeetingRoom_Scheduler/Code/MeetingRoom/: CMakeLists.txt
OOD/MeetingRoom_Scheduler/Code/MeetingRoom/inc/: MeetingRoom.h
OOD/MeetingRoom_Scheduler/Code/MeetingRoom/src/: MeetingRoom.cpp
OOD/MeetingRoom_Scheduler/Code/MeetingScheduler/: CMakeLists.txt
OOD/MeetingRoom_Scheduler/Code/MeetingScheduler/inc/: MeetingScheduler.h
OOD/MeetingRoom_Scheduler/Code/MeetingScheduler/src/: MeetingScheduler.cpp
OOD/MeetingRoom_Scheduler/Code/Notification/: CMakeLists.txt
OOD/MeetingRoom_Scheduler/Code/Notification/inc/: Notification.h
OOD/MeetingRoom_Scheduler/Code/Notification/src/: Notification.cpp
OOD/MeetingRoom_Scheduler/Code/User/: CMakeLists.txt
OOD/MeetingRoom_Scheduler/Code/User/inc/: User.h
OOD/MeetingRoom_Scheduler/Code/User/src/: User.cpp
OOD/MeetingRoom_Scheduler/Code/common/inc/: common.h
Operating_Systems/: Design_Goals.md  Linux_vs_Windows.md  README.md
Projects/: README.adoc  README.md
Projects/C++/Read_File_Custom_Dump_XMLTxtJsonConsole/: CMakeLists.txt  README.md
Projects/C++/Read_File_Custom_Dump_XMLTxtJsonConsole/Display/inc/: Display.h
Projects/C++/Read_File_Custom_Dump_XMLTxtJsonConsole/Display/src/: Display.cpp
Projects/C++/Read_File_Custom_Dump_XMLTxtJsonConsole/Driver/: CMakeLists.txt
Projects/C++/Read_File_Custom_Dump_XMLTxtJsonConsole/Parser/: CMakeLists.txt
Projects/C++/Read_File_Custom_Dump_XMLTxtJsonConsole/Parser/src/: Parser.cpp
Projects/C++/Read_File_Custom_Dump_XMLTxtJsonConsole/Tests/: CMakeLists.txt
Projects/C++/Read_File_Custom_Dump_XMLTxtJsonConsole/Tests/inc/: tests.h
Projects/C++/Read_File_Custom_Dump_XMLTxtJsonConsole/Tests/src/: test1.cc
Projects/C++/Read_File_Custom_Dump_XMLTxtJsonConsole/common/inc/: exception.h  null_pointer_exception.h
Projects/Rust/CICDAsGithubAction_Readymlfile_hashRepo_SendtoHttpServer/: Cargo.toml  README.md
Projects/Rust/CICDAsGithubAction_Readymlfile_hashRepo_SendtoHttpServer/src/: common.rs  create_send.rs  git_handler.rs  main.rs  parse.rs
System-Design/: README
Test-Framework/: README.md
Threads_Processes_IPC/: README.adoc  README.md
Versioning_VersionNumbers/: README.md
amazon_questions/: bookmyshow.c  drone_flight_planner.cpp  frog_minimal_jump_from_posX_to_posY.c  longestPassword_from_givenPasswordStrings.cpp
assembly/: Memory_layout_of_object.md  README.md  Stack_frame_example.md  arguments_to_function.c  memory_layout_of_object.cpp  stack-frame-example.c
c++/: aggregation.cpp  assignment_operator_vs_cc.cpp  composition.cpp  create-thread.cpp  final_function.cpp  friend_class.cpp  friend_function.cpp  public_inheritance.cpp  pure_virtual_function.cpp  simple_namespace.cpp  virtual_destructor.cpp
cpu_memory_thread_process/: README.md
data-structures/: README  README.md
ds_questions/: README  README.md
dynamic-programming/: fibonacci-series.cpp
goLang/: arrays-slices.go  for-loop.go  functions.go  if-statement.go  struct.go
processes/: process_copy_on_write.c  process_creation.c
puzzles_random/: Frog_Position_After_T_Sec.cpp  Minimum_Subseq_in_Non_Inc_Order.cpp  binary_maze.cpp  power_puff_girls.cpp
python/: constructors.py  constructors_with_super.py  exceptions.py  functions.md  functions.py  memory_profiler.py  package.py  restful_apis_get_post_del.py  super-function.py
searches/: README.md
sorting/: comparison  quick-sort.cpp
strings/: Attribute_Parser.cpp  basic_operations.cpp  check_pangram.cpp  find_all_permutations.cpp  find_unique_anagrams.cpp  longest_happy_prefix.cpp  longest_palindrome_substring.cpp  one_string_is_permutation_of_other.cpp  own_strcpy.cpp  permutation_of_any_palindrome.cpp  string_compression.cpp
(+3859 files in other folders)
