[package]
name = "Oblivious"
version = "0.1.0"
authors = ["amitk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.8"
#serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.3"
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"] }
log = {version = "0.4"}
reqwest = {version = "0.11.10"}
http = {version = "0.2"}
rust-argon2 = "1.0"
